kubernetes/jellyfin/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-nfs-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: media
              mountPath: /media
              readOnly: true
            - name: config
              mountPath: /config
          resources:
            limits:
              cpu: "4"
              memory: "4Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
